Ensured that animations occur with an increased z-index Updated react deps

--- a/src/CalendarTiles.scss
+++ b/src/CalendarTiles.scss
@@ -159,11 +159,14 @@
 @keyframes pop {
   0% {
     transform: scale(1);
+    z-index: 3;
   }
   50% {
     transform: scale(1.1);
+    z-index: 3;
   }
   100% {
     transform: scale(1);
+    z-index: 2;
   }
 }
